--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     <h2>My Virtual Lab Setup</h2>
     <p>This lab simulates a professional enterprise network for testing and learning:</p>
     <ul>
-      <li><strong>pfSense</strong> – Virtual firewall/router</li>
       <li><strong>Active Directory</strong> – Domain Controller (jeff.local)</li>
+      <li><strong>pfSense</strong> – Virtual firewall/router</li>
       <li><strong>Windows Client</strong> – Joined to AD domain</li>
       <li><strong>Ubuntu Apache Server</strong> – Web server with HTML content</li>
       <li><strong>File Server</strong> – Shares via SMB</li>
@@ -222,11 +222,11 @@
           <tr><th>VM Name</th><th>OS / Role</th><th>RAM (GB)</th><th>Storage (GB)</th></tr>
         </thead>
         <tbody>
-          <tr><td>pfSense</td><td>Virtual firewall/router</td><td>1</td><td>10</td></tr>
           <tr><td>Active Directory DC</td><td>Windows Server 2019 AD/DNS</td><td>4</td><td>60</td></tr>
-          <tr><td>Windows Client</td><td>Windows 10 domain client</td><td>4</td><td>40</td></tr>
-          <tr><td>Apache Web Server</td><td>Ubuntu + Apache</td><td>2</td><td>20</td></tr>
-          <tr><td>File Server</td><td>Windows Server (SMB Shares)</td><td>4</td><td>50</td></tr>
+          <tr><td>pfSense</td><td>Virtual firewall/router</td><td>.5</td><td>10</td></tr>
+          <tr><td>Windows Client</td><td>Windows 10 domain client</td><td>2</td><td>40</td></tr>
+          <tr><td>Apache Web Server</td><td>Ubuntu + Apache</td><td>1.5</td><td>20</td></tr>
+          <tr><td>File Server</td><td>Windows Server (SMB Shares)</td><td>2</td><td>50</td></tr>
         </tbody>
       </table>
       <hr>
