--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
       <h3>Windows Environment Lab</h3>
       <h2>📸 Lab Screenshots</h2>
       <div class="tabs">
-        <button class="tab-btn active" onclick="showSlideshow('ad', event)">AD Server</button>
-        <button class="tab-btn" onclick="showSlideshow('pf', event)">pfSense</button>
-        <button class="tab-btn" onclick="showSlideshow('client', event)">Windows Client</button>
-        <button class="tab-btn" onclick="showSlideshow('web', event)">Web Server</button>
-        <button class="tab-btn" onclick="showSlideshow('file', event)">File Server</button>
+        <button class=".slideshow-btn active" onclick="showSlideshow('ad', event)">AD Server</button>
+        <button class=".slideshow-btn" onclick="showSlideshow('pf', event)">pfSense</button>
+        <button class=".slideshow-btn" onclick="showSlideshow('client', event)">Windows Client</button>
+        <button class=".slideshow-btn" onclick="showSlideshow('web', event)">Web Server</button>
+        <button class=".slideshow-btn" onclick="showSlideshow('file', event)">File Server</button>
       </div>
       <div id="slideshows">
         <div class="slideshow-container" id="ad">
