--- a/index.html
+++ b/index.html
@@ -188,17 +188,17 @@
         <div class="slideshow-container" id="ad">
           <button class="arrow left" onclick="changeSlide(0, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(0, 1)">&#10095;</button>
-          <img src="images/ADVMinfo.png" class="slide-img slide-0 active">
+          <img src="images/ADUsers.png" class="slide-img slide-0 active">
           <img src="images/ADUC.png" class="slide-img slide-0">
           <img src="images/DNSManager.png" class="slide-img slide-0">
-          <img src="images/ADUsers.png" class="slide-img slide-0">
+          <img src="images/ADVMinfo.png" class="slide-img slide-0">
           <img src="images/Servmanager.png" class="slide-img slide-0">
         </div>
         <div class="slideshow-container" id="pf" style="display:none">
           <button class="arrow left" onclick="changeSlide(1, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(1, 1)">&#10095;</button>
-          <img src="images/Pfsense_virtualbox.png" class="slide-img slide-1 active">
-          <img src="images/pfsenserouter.png" class="slide-img slide-1">
+          <img src="images/pfsenserouter.png" class="slide-img slide-1 active">
+          <img src="images/Pfsense_virtualbox.png" class="slide-img slide-1">
           <img src="images/pfsense_dashboard.png" class="slide-img slide-1">
           <img src="images/pfsense_rules.png" class="slide-img slide-1">
           <img src="images/pfsense_interfaces.png" class="slide-img slide-1">
@@ -206,24 +206,24 @@
         <div class="slideshow-container" id="client" style="display:none">
           <button class="arrow left" onclick="changeSlide(2, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(2, 1)">&#10095;</button>
-          <img src="images/Win10VM.png" class="slide-img slide-2 active">
-          <img src="images/Win10login.png" class="slide-img slide-2">
+          <img src="images/Win10login.png" class="slide-img slide-2 active">
+          <img src="images/Win10VM.png" class="slide-img slide-2">
           <img src="images/Win10Domain.png" class="slide-img slide-2">
           <img src="images/PingDomain.png" class="slide-img slide-2">
         </div>
         <div class="slideshow-container" id="web" style="display:none">
           <button class="arrow left" onclick="changeSlide(3, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(3, 1)">&#10095;</button>
-          <img src="images/Webserverinfo.png" class="slide-img slide-3 active">
+          <img src="images/Tetsinghtml.png" class="slide-img slide-3 active">
           <img src="images/Webserver1.png" class="slide-img slide-3">
           <img src="images/PingServer.png" class="slide-img slide-3">
-          <img src="images/Tetsinghtml.png" class="slide-img slide-3">
+          <img src="images/Webserverinfo.png" class="slide-img slide-3">
         </div>
         <div class="slideshow-container" id="file" style="display:none">
           <button class="arrow left" onclick="changeSlide(4, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(4, 1)">&#10095;</button>
-          <img src="images/Fileservinfo.png" class="slide-img slide-4 active">
-          <img src="images/Sharing.png" class="slide-img slide-4">
+          <img src="images/Filesharing.png" class="slide-img slide-4 active">
+          <img src="images/Fileservinfo.png" class="slide-img slide-4">
           <img src="images/Computermgmt.png" class="slide-img slide-4">
         </div>
       </div>
