--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="slideshow-container" id="file" style="display:none">
           <button class="arrow left" onclick="changeSlide(4, -1)">&#10094;</button>
           <button class="arrow right" onclick="changeSlide(4, 1)">&#10095;</button>
-          <img src="images/Filesharing.png" class="slide-img slide-4 active">
+          <img src="images/Sharing.png" class="slide-img slide-4 active">
           <img src="images/Fileservinfo.png" class="slide-img slide-4">
           <img src="images/Computermgmt.png" class="slide-img slide-4">
         </div>
